--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,87 @@
 
 /* nav styles */
 
+/* header */
+.header{
+  background-image: url(../images/developer.png), url(../images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+}
+
 nav{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 200px;
 }
+
+.nav-tittle{
+  font-weight: 800;
+  font-size: 45px;
+}
+
+.text-primary{
+  color: rgb(253, 110, 10);
+}
+
+nav ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav ul li{
+  list-style: none;
+  margin-right: 51px;
+}
+nav ul li a {
+  text-decoration: none;
+  font-size: 20px;
+  color: rgb(71, 71, 71);
+}
+
+.btn-primary{
+  background-color: rgb(253, 110, 10);
+  font-weight: 700;
+  color: white;
+  padding: 18px 35px;
+  border-radius: 5px;
+  font-size: 20px;
+  border: none;
+}
+
+/* Banner text area */
+.banner{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 35px 0px 200px;
+}
+
+.banner-content{
+  width: 580px;
+}
+
+.banner-content button{
+margin-right: 30px;
+}
+.banner-greating{
+  color: rgb(71, 71, 71);
+  font-size: 45px;
+  font-weight: 600;
+}
+
+.banner-tittle{
+  font-weight: bold;
+  font-size: 85px;
+}
+
+.banner-discription{
+  color: rgb(117, 117, 117);
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.banner-profile-pic{
+  width: 580px;
+}
+/* Banner text area */
