--- a/style/style.css
+++ b/style/style.css
@@ -64,6 +64,16 @@ nav ul li a {
   border: none;
 }
 
+.contact-btn{
+  border: 1px solid orangered;
+  font-weight: 700;
+  color: rgb(253, 110, 10);
+  padding: 18px 35px;
+  border-radius: 5px;
+  font-size: 20px;
+  background: transparent;
+}
+
 /* Banner text area */
 .banner{
   display: flex;
