--- a/style/style.css
+++ b/style/style.css
@@ -297,7 +297,7 @@ footer{
 }
 #text{
   height: 33px;
-  width: 340px;
+  width: 460px;
   padding: 10px 20px;
   border-radius: 5px;
   border: none;
@@ -306,7 +306,7 @@ footer{
 
 #email{
   height: 33px;
-  width: 340px;
+  width: 460px;
   padding: 10px 20px;
   border-radius: 5px;
   border: none;
@@ -315,7 +315,7 @@ footer{
 
 #text-area{
   height: 180px;
-  width: 340px;
+  width: 460px;
   padding: 10px 20px;
   border-radius: 5px;
   border: none;
@@ -420,6 +420,13 @@ main{
   text-align: center;
   margin-top: 20px;
 }
-
-
+#text{
+  width: 330px;
+}
+#email{
+  width: 330px;
+}
+#text-area{
+  width: 330px;
+}
 }
